# JNICommon

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wc/commontondk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_wc_commontondk_myjni_Codec.cpp  com_wc_commontondk_myjni_Codec.h
app/src/main/java/com/wc/commontondk/: MainActivity.java
app/src/main/java/com/wc/commontondk/myjni/: Codec.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wc/commontondk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
